[package]
name = "GGJ-Base"
version = "0.1.0"
authors = [
    "Graham Wihlidal <graham@wihlidal.ca>",
    "Tomasz Stachowiak <h3@h3.gd>"
]
license = "MIT"

[[bin]]
name = "ggj-base"
path = "src/main.rs"

[dependencies]
conrod = "*"
piston = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
piston-ai_behavior = "*"
piston2d-sprite = "*"
piston_window = "*"
piston-music = "*"
piston2d-graphics_tree = "*"
image = "*"
piston2d-drag_controller = "*"
find_folder = "0.3.0"
tiled = "0.7.2"
freetype-rs = "0.16.0"
nalgebra = "*"
ncollide = "*"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"
vecmath = "0.3.0"
camera_controllers = "0.23.0"
rand = "0.3.14"
shader_version = "0.3.0"

[dependencies.pistoncore-sdl2_window]
version = "0.47.0"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.39.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.43.0"
optional = true

[features]
default = ["include_glutin"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]